--- a/composer.json
+++ b/composer.json
@@ -8,28 +8,27 @@
     ],
     "license": "MIT",
     "require": {
-        "anlutro/l4-settings": "^1.0",
-        "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
-        "jackiedo/log-reader": "^2.2",
-        "laravel/framework": "^9.0",
-        "laravel/socialite": "^5.2",
-        "laravel/tinker": "^2.5",
-        "spatie/laravel-activitylog": "^4.0",
-        "spatie/laravel-permission": "^5.5.0",
-        "yajra/laravel-datatables-buttons": "^4.10",
-        "yajra/laravel-datatables-oracle": "~9.0"
+        "anlutro/l4-settings": "^1.4.1",
+        "guzzlehttp/guzzle": "^7.9.2",
+        "jackiedo/log-reader": "^2.3.0",
+        "laravel/framework": "^10.0",
+        "laravel/socialite": "^5.16",
+        "laravel/tinker": "^2.10",
+        "spatie/laravel-activitylog": "^4.9",
+        "spatie/laravel-permission": "^5.11.1",
+        "yajra/laravel-datatables-buttons": "^9.1.4",
+        "yajra/laravel-datatables-oracle": "~10.11.4"
     },
     "require-dev": {
-        "barryvdh/laravel-ide-helper": "^2.9",
-        "fakerphp/faker": "^1.9.1",
-        "laravel/breeze": "^1.0",
-        "laravel/sail": "^1.0.1",
-        "mockery/mockery": "^1.4.2",
-        "nunomaduro/collision": "^6.0",
-        "phpunit/phpunit": "^9.3.3",
+        "barryvdh/laravel-ide-helper": "^3.1.0",
+        "fakerphp/faker": "^1.24.0",
+        "laravel/breeze": "^1.29.1",
+        "laravel/sail": "^1.38.0",
+        "mockery/mockery": "^1.6.12",
+        "nunomaduro/collision": "^7.0",
+        "phpunit/phpunit": "^10.0",
         "roave/security-advisories": "dev-latest",
-        "spatie/laravel-ignition": "^1.0"
+        "spatie/laravel-ignition": "^2.8.0"
     },
     "config": {
         "optimize-autoloader": true,
@@ -59,7 +58,7 @@
             "Tests\\": "tests/"
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true,
     "scripts": {
         "post-autoload-dump": [
