--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^10.0",
         "laravel/socialite": "^5.16",
         "laravel/tinker": "^2.10",
+        "laraveles/spanish": "^1.5",
         "spatie/laravel-activitylog": "^4.9",
         "spatie/laravel-permission": "^5.11.1",
         "yajra/laravel-datatables-buttons": "^9.1.4",
