error importando apdiamantes resources

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -255,6 +255,15 @@
     "/demo3/plugins/custom/flatpickr/flatpickr.bundle.css": "/demo3/plugins/custom/flatpickr/flatpickr.bundle.css",
     "/demo3/css/style.bundle.css": "/demo3/css/style.bundle.css",
     "/demo3/plugins/global/plugins-custom.bundle.css": "/demo3/plugins/global/plugins-custom.bundle.css",
+    "/apdiamantes/media/fondo_1.jpg": "/apdiamantes/media/fondo_1.jpg",
+    "/apdiamantes/media/logo.jpeg": "/apdiamantes/media/logo.jpeg",
+    "/apdiamantes/media/logo.jpg": "/apdiamantes/media/logo.jpg",
+    "/apdiamantes/media/logo_blanco_2.png": "/apdiamantes/media/logo_blanco_2.png",
+    "/apdiamantes/media/logo_negro.ico": "/apdiamantes/media/logo_negro.ico",
+    "/apdiamantes/media/logo_negro.png": "/apdiamantes/media/logo_negro.png",
+    "/apdiamantes/media/logo_negro.svg": "/apdiamantes/media/logo_negro.svg",
+    "/apdiamantes/media/logo_negro_pequeno.png": "/apdiamantes/media/logo_negro_pequeno.png",
+    "/apdiamantes/media/logo_negro_pequeno_2.jpg": "/apdiamantes/media/logo_negro_pequeno_2.jpg",
     "/demo3/plugins/global/plugins.bundle.js": "/demo3/plugins/global/plugins.bundle.js",
     "/demo3/js/scripts.bundle.js": "/demo3/js/scripts.bundle.js",
     "/demo3/js/custom/account/settings/profile-details.js": "/demo3/js/custom/account/settings/profile-details.js",
