--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -255,6 +255,7 @@
     "/demo3/plugins/custom/flatpickr/flatpickr.bundle.css": "/demo3/plugins/custom/flatpickr/flatpickr.bundle.css",
     "/demo3/css/style.bundle.css": "/demo3/css/style.bundle.css",
     "/demo3/plugins/global/plugins-custom.bundle.css": "/demo3/plugins/global/plugins-custom.bundle.css",
+    "/apdiamantes/media/apdiamantes-dark.svg": "/apdiamantes/media/apdiamantes-dark.svg",
     "/apdiamantes/media/fondo_1.jpg": "/apdiamantes/media/fondo_1.jpg",
     "/apdiamantes/media/logo.jpeg": "/apdiamantes/media/logo.jpeg",
     "/apdiamantes/media/logo.jpg": "/apdiamantes/media/logo.jpg",
