--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME='Metronic'
+APP_NAME='APDiamantes'
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -10,7 +10,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_DATABASE=
+DB_DATABASE=apdiamantes
 DB_USERNAME=
 DB_PASSWORD=
 
@@ -27,12 +27,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=''
+MAIL_PASSWORD=''
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_FROM_ADDRESS='andra@apdiamantes.com'
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
