--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -255,6 +255,7 @@
     "/demo3/plugins/custom/flatpickr/flatpickr.bundle.css": "/demo3/plugins/custom/flatpickr/flatpickr.bundle.css",
     "/demo3/css/style.bundle.css": "/demo3/css/style.bundle.css",
     "/demo3/plugins/global/plugins-custom.bundle.css": "/demo3/plugins/global/plugins-custom.bundle.css",
+    "/apdiamantes/js/admin/users.js": "/apdiamantes/js/admin/users.js",
     "/apdiamantes/media/apdiamantes-dark.svg": "/apdiamantes/media/apdiamantes-dark.svg",
     "/apdiamantes/media/fondo_1.jpg": "/apdiamantes/media/fondo_1.jpg",
     "/apdiamantes/media/logo.jpeg": "/apdiamantes/media/logo.jpeg",
@@ -265,6 +266,7 @@
     "/apdiamantes/media/logo_negro.svg": "/apdiamantes/media/logo_negro.svg",
     "/apdiamantes/media/logo_negro_pequeno.png": "/apdiamantes/media/logo_negro_pequeno.png",
     "/apdiamantes/media/logo_negro_pequeno_2.jpg": "/apdiamantes/media/logo_negro_pequeno_2.jpg",
+    "/apdiamantes/sass/custom.scss": "/apdiamantes/sass/custom.scss",
     "/demo3/plugins/global/plugins.bundle.js": "/demo3/plugins/global/plugins.bundle.js",
     "/demo3/js/scripts.bundle.js": "/demo3/js/scripts.bundle.js",
     "/demo3/js/custom/account/settings/profile-details.js": "/demo3/js/custom/account/settings/profile-details.js",
