--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -256,6 +256,7 @@
     "/demo3/css/style.bundle.css": "/demo3/css/style.bundle.css",
     "/demo3/plugins/global/plugins-custom.bundle.css": "/demo3/plugins/global/plugins-custom.bundle.css",
     "/apdiamantes/js/admin/users.js": "/apdiamantes/js/admin/users.js",
+    "/apdiamantes/js/contacto/index.js": "/apdiamantes/js/contacto/index.js",
     "/apdiamantes/media/apdiamantes-dark.svg": "/apdiamantes/media/apdiamantes-dark.svg",
     "/apdiamantes/media/fondo_1.jpg": "/apdiamantes/media/fondo_1.jpg",
     "/apdiamantes/media/logo.jpeg": "/apdiamantes/media/logo.jpeg",
