--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -242,10 +242,10 @@
     "/demo3/js/custom/intro.js": "/demo3/js/custom/intro.js",
     "/demo3/js/custom/landing.js": "/demo3/js/custom/landing.js",
     "/demo3/js/custom/widgets.js": "/demo3/js/custom/widgets.js",
+    "/demo3/js/app.js": "/demo3/js/app.js",
     "/demo3/plugins/global/plugins.bundle.css": "/demo3/plugins/global/plugins.bundle.css",
     "/demo3/plugins/custom/datatables/datatables.bundle.css": "/demo3/plugins/custom/datatables/datatables.bundle.css",
     "/demo3/plugins/custom/leaflet/leaflet.bundle.css": "/demo3/plugins/custom/leaflet/leaflet.bundle.css",
-    "/demo3/plugins/custom/cropper/cropper.bundle.css": "/demo3/plugins/custom/cropper/cropper.bundle.css",
     "/demo3/plugins/custom/cookiealert/cookiealert.bundle.css": "/demo3/plugins/custom/cookiealert/cookiealert.bundle.css",
     "/demo3/plugins/custom/tiny-slider/tiny-slider.bundle.css": "/demo3/plugins/custom/tiny-slider/tiny-slider.bundle.css",
     "/demo3/plugins/custom/prismjs/prismjs.bundle.css": "/demo3/plugins/custom/prismjs/prismjs.bundle.css",
@@ -253,6 +253,7 @@
     "/demo3/plugins/custom/jkanban/jkanban.bundle.css": "/demo3/plugins/custom/jkanban/jkanban.bundle.css",
     "/demo3/plugins/custom/fullcalendar/fullcalendar.bundle.css": "/demo3/plugins/custom/fullcalendar/fullcalendar.bundle.css",
     "/demo3/plugins/custom/flatpickr/flatpickr.bundle.css": "/demo3/plugins/custom/flatpickr/flatpickr.bundle.css",
+    "/demo3/plugins/custom/cropper/cropper.bundle.css": "/demo3/plugins/custom/cropper/cropper.bundle.css",
     "/demo3/css/style.bundle.css": "/demo3/css/style.bundle.css",
     "/demo3/plugins/global/plugins-custom.bundle.css": "/demo3/plugins/global/plugins-custom.bundle.css",
     "/apdiamantes/js/admin/users.js": "/apdiamantes/js/admin/users.js",
