--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@
 # Ignorar la carpeta de srchivos compilados del demo
 /public/demo3
 /public/apdiamantes
+/public/js
 
 # Ignorar los archivos de Composer y NPM
 /vendor
