--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -242,7 +242,7 @@
     "/demo3/js/custom/intro.js": "/demo3/js/custom/intro.js",
     "/demo3/js/custom/landing.js": "/demo3/js/custom/landing.js",
     "/demo3/js/custom/widgets.js": "/demo3/js/custom/widgets.js",
-    "/demo3/js/app.js": "/demo3/js/app.js",
+    "/js/app.js": "/js/app.js",
     "/demo3/plugins/global/plugins.bundle.css": "/demo3/plugins/global/plugins.bundle.css",
     "/demo3/plugins/custom/datatables/datatables.bundle.css": "/demo3/plugins/custom/datatables/datatables.bundle.css",
     "/demo3/plugins/custom/leaflet/leaflet.bundle.css": "/demo3/plugins/custom/leaflet/leaflet.bundle.css",
