invitacion de usuarios a grupo

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -259,6 +259,8 @@
     "/apdiamantes/js/admin/users.js": "/apdiamantes/js/admin/users.js",
     "/apdiamantes/js/contacto/index.js": "/apdiamantes/js/contacto/index.js",
     "/apdiamantes/media/apdiamantes-dark.svg": "/apdiamantes/media/apdiamantes-dark.svg",
+    "/apdiamantes/media/apdiamantes_inscripcion.xlsx": "/apdiamantes/media/apdiamantes_inscripcion.xlsx",
+    "/apdiamantes/media/aviso_de_privacidad.pdf": "/apdiamantes/media/aviso_de_privacidad.pdf",
     "/apdiamantes/media/fondo_1.jpg": "/apdiamantes/media/fondo_1.jpg",
     "/apdiamantes/media/logo.jpeg": "/apdiamantes/media/logo.jpeg",
     "/apdiamantes/media/logo.jpg": "/apdiamantes/media/logo.jpg",
