--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@
 .phpunit.result.cache
 .phpstorm.meta.php
 /.vscode
+_ide_helper.php
 
 # Ignorar los archivos de depuración y otros ficheros temporales
 *.log
