--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/socialite": "^5.16",
         "laravel/tinker": "^2.10",
         "laraveles/spanish": "^1.5",
+        "maatwebsite/excel": "^3.1",
         "spatie/laravel-activitylog": "^4.9",
         "spatie/laravel-permission": "^5.11.1",
         "yajra/laravel-datatables-buttons": "^9.1.4",
