--- a/docker/php/supervisord.conf
+++ b/docker/php/supervisord.conf
@@ -8,9 +8,9 @@ autorestart=true
 priority=1
 
 [program:queue-worker]
-command=php /var/www/html/artisan queue:work redis --sleep=3 --tries=3 --timeout=90
+command=php /var/www/html/artisan queue:work --sleep=3 --tries=3 --timeout=90
 autostart=true
 autorestart=true
-user=www-data
+user=root
 redirect_stderr=true
 stdout_logfile=/var/log/supervisor/queue-worker.log
