--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -24,6 +24,7 @@ RUN apt-get update && apt-get install -y \
     git \
     curl \
     libzip-dev \
+    npm \
     supervisor \
     && docker-php-ext-configure gd --with-freetype --with-jpeg \
     && docker-php-ext-install pdo pdo_pgsql zip gd \
