--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,6 +1,7 @@
 server {
     listen 80;
     index index.php index.html;
+    client_max_body_size 10M;
     root /var/www/html/public;
 
     location / {
