ajustes para desarrollo en docker

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,22 +1,46 @@
 server {
     listen 80;
-    index index.php index.html;
-    client_max_body_size 10M;
-    root /var/www/html/public;
+    server_name localhost;
 
+    root /var/www/html/public;
+    index index.php index.html index.htm;
+
+    # Tamaño máximo de archivos subidos
+    client_max_body_size 20M;
+
+    # Acceso general al sitio
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
+    # PHP-FPM config
     location ~ \.php$ {
+        include fastcgi_params;
         fastcgi_pass app:9000;
         fastcgi_index index.php;
-        include fastcgi_params;
+
+        # Usa realpath para resolver rutas simbólicas correctamente (Laravel uses symlinks for storage)
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         fastcgi_param DOCUMENT_ROOT $realpath_root;
+
+        # Asegúrate de pasar cabeceras importantes
+        fastcgi_param HTTP_PROXY "";
     }
 
-    location ~ /\.ht {
+    # Deniega acceso a archivos ocultos (como .env)
+    location ~ /\.(?!well-known).* {
         deny all;
+    }
+
+    # Seguridad adicional: evitar ejecución de PHP en ciertas carpetas
+    location ~* ^/(storage|vendor|node_modules)/ {
+        deny all;
+        return 403;
+    }
+
+    # Expiración de archivos estáticos (opcional, mejora rendimiento en producción)
+    location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
+        expires 30d;
+        access_log off;
     }
 }
