--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME='APDiamantes'
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:YOQog8+jcHBdDX3bJ9Og6vQzO/NZ9GAE1fTEim251zs=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -8,31 +8,32 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
+DB_HOST=postgres
 DB_PORT=5432
 DB_DATABASE=apdiamantes
-DB_USERNAME=
-DB_PASSWORD=
+DB_USERNAME=tonho
+DB_PASSWORD=2305
 
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
-SESSION_LIFETIME=120
+BROADCAST_DRIVER=redis
+QUEUE_CONNECTION=redis
+CACHE_DRIVER=redis
+SESSION_DRIVER=redis
+SESSION_LIFETIME=60
+REDIS_CLIENT=phpredis
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
 MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=''
-MAIL_PASSWORD=''
+MAIL_USERNAME='e3b3472287dbd9'
+MAIL_PASSWORD='3f02a956b46045'
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS='andra@apdiamantes.com'
+MAIL_FROM_ADDRESS='ap@diamantes.com'
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
