--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     volumes:
       - .:/var/www/html
       - ./docker/php/php-dev.ini:/usr/local/etc/php/conf.d/99-custom.ini
+      - ./docker/bash_history/.bash_history:/root/.bash_history
     depends_on:
       - postgres
       - redis
