listado de grupos

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2233,6 +2233,7 @@
     "/demo3/media/svg/shapes/dogecoin.svg": "/demo3/media/svg/shapes/dogecoin.svg",
     "/demo3/media/svg/shapes/ethereum.svg": "/demo3/media/svg/shapes/ethereum.svg",
     "/demo3/media/svg/shapes/man-head.svg": "/demo3/media/svg/shapes/man-head.svg",
+    "/demo3/media/svg/shapes/perrito_coin.svg": "/demo3/media/svg/shapes/perrito_coin.svg",
     "/demo3/media/svg/shapes/top-green.png": "/demo3/media/svg/shapes/top-green.png",
     "/demo3/media/svg/shapes/wave-bg-dark.svg": "/demo3/media/svg/shapes/wave-bg-dark.svg",
     "/demo3/media/svg/shapes/wave-bg-purple.svg": "/demo3/media/svg/shapes/wave-bg-purple.svg",
