Modulo usuarios completo, bonos y descuentos pendientes

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -32,8 +32,14 @@ server {
         deny all;
     }
 
-    # Seguridad adicional: evitar ejecución de PHP en ciertas carpetas
-    location ~* ^/(storage|vendor|node_modules)/ {
+    # PERMITIR acceso a archivos del symlink storage (public/storage)
+    location ^~ /storage/ {
+        root /var/www/html/public;
+        try_files $uri $uri/ =404;
+    }
+
+    # NEGAR acceso directo a carpetas sensibles
+    location ~* ^/(vendor|node_modules)/ {
         deny all;
         return 403;
     }
