--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2298,5 +2298,6 @@
     "/demo3/plugins/custom/flatpickr/flatpickr.bundle.js": "/demo3/plugins/custom/flatpickr/flatpickr.bundle.js",
     "/demo3/plugins/custom/formrepeater/formrepeater.bundle.js": "/demo3/plugins/custom/formrepeater/formrepeater.bundle.js",
     "/demo3/plugins/custom/fullcalendar/fullcalendar.bundle.js": "/demo3/plugins/custom/fullcalendar/fullcalendar.bundle.js",
-    "/demo3/js/widgets.bundle.js": "/demo3/js/widgets.bundle.js"
+    "/demo3/js/widgets.bundle.js": "/demo3/js/widgets.bundle.js",
+    "/apdiamantes/media/logo_blanco.svg": "/apdiamantes/media/logo_blanco.svg"
 }
