ajuste en webpack.mix y niveles component

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -242,7 +242,10 @@
     "/demo3/js/custom/intro.js": "/demo3/js/custom/intro.js",
     "/demo3/js/custom/landing.js": "/demo3/js/custom/landing.js",
     "/demo3/js/custom/widgets.js": "/demo3/js/custom/widgets.js",
-    "/js/apps/invita_usuarios.js": "/js/apps/invita_usuarios.js",
+    "/apdiamantes/js/admin/niveles.js": "/apdiamantes/js/admin/niveles.js",
+    "/apdiamantes/js/admin/users.js": "/apdiamantes/js/admin/users.js",
+    "/apdiamantes/js/contacto/index.js": "/apdiamantes/js/contacto/index.js",
+    "/apdiamantes/js/grupo/invita/index.js": "/apdiamantes/js/grupo/invita/index.js",
     "/js/apps/admin_usuarios.js": "/js/apps/admin_usuarios.js",
     "/js/apps/admin_niveles.js": "/js/apps/admin_niveles.js",
     "/demo3/plugins/global/plugins.bundle.css": "/demo3/plugins/global/plugins.bundle.css",
@@ -258,23 +261,6 @@
     "/demo3/plugins/custom/cropper/cropper.bundle.css": "/demo3/plugins/custom/cropper/cropper.bundle.css",
     "/demo3/css/style.bundle.css": "/demo3/css/style.bundle.css",
     "/demo3/plugins/global/plugins-custom.bundle.css": "/demo3/plugins/global/plugins-custom.bundle.css",
-    "/apdiamantes/js/admin/niveles.js": "/apdiamantes/js/admin/niveles.js",
-    "/apdiamantes/js/admin/users.js": "/apdiamantes/js/admin/users.js",
-    "/apdiamantes/js/contacto/index.js": "/apdiamantes/js/contacto/index.js",
-    "/apdiamantes/media/apdiamantes-dark.svg": "/apdiamantes/media/apdiamantes-dark.svg",
-    "/apdiamantes/media/apdiamantes_inscripcion.xlsx": "/apdiamantes/media/apdiamantes_inscripcion.xlsx",
-    "/apdiamantes/media/aviso_de_privacidad.pdf": "/apdiamantes/media/aviso_de_privacidad.pdf",
-    "/apdiamantes/media/fondo_1.jpg": "/apdiamantes/media/fondo_1.jpg",
-    "/apdiamantes/media/logo.jpeg": "/apdiamantes/media/logo.jpeg",
-    "/apdiamantes/media/logo.jpg": "/apdiamantes/media/logo.jpg",
-    "/apdiamantes/media/logo_blanco.svg": "/apdiamantes/media/logo_blanco.svg",
-    "/apdiamantes/media/logo_blanco_2.png": "/apdiamantes/media/logo_blanco_2.png",
-    "/apdiamantes/media/logo_negro.ico": "/apdiamantes/media/logo_negro.ico",
-    "/apdiamantes/media/logo_negro.png": "/apdiamantes/media/logo_negro.png",
-    "/apdiamantes/media/logo_negro.svg": "/apdiamantes/media/logo_negro.svg",
-    "/apdiamantes/media/logo_negro_pequeno.png": "/apdiamantes/media/logo_negro_pequeno.png",
-    "/apdiamantes/media/logo_negro_pequeno_2.jpg": "/apdiamantes/media/logo_negro_pequeno_2.jpg",
-    "/apdiamantes/sass/custom.scss": "/apdiamantes/sass/custom.scss",
     "/demo3/plugins/global/plugins.bundle.js": "/demo3/plugins/global/plugins.bundle.js",
     "/demo3/js/scripts.bundle.js": "/demo3/js/scripts.bundle.js",
     "/demo3/js/custom/account/settings/profile-details.js": "/demo3/js/custom/account/settings/profile-details.js",
@@ -2301,5 +2287,18 @@
     "/demo3/plugins/custom/flatpickr/flatpickr.bundle.js": "/demo3/plugins/custom/flatpickr/flatpickr.bundle.js",
     "/demo3/plugins/custom/formrepeater/formrepeater.bundle.js": "/demo3/plugins/custom/formrepeater/formrepeater.bundle.js",
     "/demo3/plugins/custom/fullcalendar/fullcalendar.bundle.js": "/demo3/plugins/custom/fullcalendar/fullcalendar.bundle.js",
-    "/demo3/js/widgets.bundle.js": "/demo3/js/widgets.bundle.js"
+    "/demo3/js/widgets.bundle.js": "/demo3/js/widgets.bundle.js",
+    "/apdiamantes/media/apdiamantes-dark.svg": "/apdiamantes/media/apdiamantes-dark.svg",
+    "/apdiamantes/media/apdiamantes_inscripcion.xlsx": "/apdiamantes/media/apdiamantes_inscripcion.xlsx",
+    "/apdiamantes/media/aviso_de_privacidad.pdf": "/apdiamantes/media/aviso_de_privacidad.pdf",
+    "/apdiamantes/media/fondo_1.jpg": "/apdiamantes/media/fondo_1.jpg",
+    "/apdiamantes/media/logo.jpeg": "/apdiamantes/media/logo.jpeg",
+    "/apdiamantes/media/logo.jpg": "/apdiamantes/media/logo.jpg",
+    "/apdiamantes/media/logo_blanco.svg": "/apdiamantes/media/logo_blanco.svg",
+    "/apdiamantes/media/logo_blanco_2.png": "/apdiamantes/media/logo_blanco_2.png",
+    "/apdiamantes/media/logo_negro.ico": "/apdiamantes/media/logo_negro.ico",
+    "/apdiamantes/media/logo_negro.png": "/apdiamantes/media/logo_negro.png",
+    "/apdiamantes/media/logo_negro.svg": "/apdiamantes/media/logo_negro.svg",
+    "/apdiamantes/media/logo_negro_pequeno.png": "/apdiamantes/media/logo_negro_pequeno.png",
+    "/apdiamantes/media/logo_negro_pequeno_2.jpg": "/apdiamantes/media/logo_negro_pequeno_2.jpg"
 }
