ajuste a login js files

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -244,6 +244,9 @@
     "/demo3/js/custom/widgets.js": "/demo3/js/custom/widgets.js",
     "/apdiamantes/js/admin/niveles.js": "/apdiamantes/js/admin/niveles.js",
     "/apdiamantes/js/admin/users.js": "/apdiamantes/js/admin/users.js",
+    "/apdiamantes/js/auth/login/index.js": "/apdiamantes/js/auth/login/index.js",
+    "/apdiamantes/js/auth/password-reset/new-password.js": "/apdiamantes/js/auth/password-reset/new-password.js",
+    "/apdiamantes/js/auth/password-reset/password-reset.js": "/apdiamantes/js/auth/password-reset/password-reset.js",
     "/apdiamantes/js/contacto/index.js": "/apdiamantes/js/contacto/index.js",
     "/apdiamantes/js/grupo/invita/index.js": "/apdiamantes/js/grupo/invita/index.js",
     "/js/apps/admin_usuarios.js": "/js/apps/admin_usuarios.js",
